# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  python-publish.yml
gendiff/: __init__.py  data.py  dicts_diff.py  diff.py  diff_formatter.py  diff_with_formatter.py  difference.py  parser.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_generate_diff.py
tests/fixtures/: file1_tree.json
