[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ArturIash <4ezyyy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
